--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,5 +1,6 @@
-* {
-    background-color: #f2fafb;
+body,
+html {
+    background-color: #f3f8f8;
     font-family: 'Quicksand', sans-serif;
 }
 
@@ -25,7 +26,15 @@
     height: 183px;
     width: 980px;
     margin-bottom: 30px;
-    border: 1px black solid;
+    border: none;
+    background-color: white;
+    box-shadow: 0 8px 2px -2px rgb(100 143 134 / 12%);
+    transition: 1s;
+}
+
+.boxes:hover {
+    transform: scale(1.3);
+    z-index: 2;
 }
 
 /* buttons */
@@ -60,5 +69,50 @@
 .description-logo {
     width: 13%;
     height: auto;
-    margin-bottom: -9px;
+    margin-bottom: -12px;
+}
+
+.featured {
+    background-color: rgb(58, 93, 94);
+    width: 100px;
+    border-radius: 13px;
+    border: 1px transparent;
+    padding: 4px;
+    color: white;
+}
+
+.title-div h5 {
+    color: rgb(53 137 119);
+
+}
+
+.company-logo {
+    margin-right: 23px;
+    padding: 9px;
+}
+
+
+.skill-container {
+    display: flex;
+    gap: 12px;
+    padding-left: 12rem;
+    margin-top: 4rem;
+}
+
+.skill-set {
+    background-color: rgb(211 243 236);
+    border: 1px transparent solid;
+    padding: 9px;
+    height: 20px;
+    font-size: 13px;
+    color: rgb(100, 143, 134);
+    font-weight: 900;
+    cursor: pointer;
+}
+
+
+/* description logo - img */
+
+.description-logo {
+    padding-right: 7px;
 }
