--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,8 +1,11 @@
 body,
 html {
     background-color: #f3f8f8;
+
     font-family: 'Quicksand', sans-serif;
 }
+
+
 
 
 /* top banner */
@@ -42,8 +45,9 @@ html {
     display: flex;
     gap: 55px;
     justify-content: center;
-    margin-bottom: 39px;
-    margin-top: 29px;
+    font-size: 10px;
+    margin-left: 1rem;
+    gap: 15px;
 }
 
 .level-btn {
@@ -54,6 +58,7 @@ html {
     color: rgb(53 137 119);
     background-color: transparent;
     cursor: pointer;
+    font-size: 20px;
 }
 
 /* logo image */
@@ -115,4 +120,118 @@ html {
 
 .description-logo {
     padding-right: 7px;
+}
+
+
+
+
+/* media quries */
+
+/* mobile*/
+
+@media only screen and (max-width: 600px) {
+
+
+    .boxes {
+        transition: none;
+        transform: none;
+        z-index: none;
+        display: flex;
+        margin: auto;
+        height: 266px;
+        width: 861px;
+        margin-bottom: 30px;
+        border: none;
+        background-color: white;
+        box-shadow: 0 8px 2px -2px rgb(100 143 134 / 12%);
+        transition: 1s;
+    }
+
+
+    .top-banner {
+        width: 261%;
+        height: 250px;
+    }
+
+
+
+    .level-btn {
+        font-size: 13px;
+
+    }
+
+    .skill-container {
+        gap: 12px;
+        margin-top: 13rem;
+        margin-left: -30rem;
+        display: flex;
+    }
+
+    .skill-set {
+
+        border: 1px transparent solid;
+        padding: 9px;
+        height: 20px;
+        font-size: 13px;
+        font-weight: 900;
+        cursor: pointer;
+        background-color: transparent;
+    }
+
+
+
+    .buttons {
+        display: flex;
+        gap: 55px;
+        justify-content: center;
+        margin-bottom: 39px;
+        margin-top: 29px;
+        margin-left: 0rem;
+    }
+
+
+    .title-div {
+        margin-left: -1rem;
+    }
+
+    .title-div p {
+        font-size: 10px;
+    }
+
+    .title-div h4 {
+        font-size: 13px;
+    }
+
+}
+
+
+@media only screen and (min-width: 600px) {
+
+    .top-banner {
+        width: 147%;
+        height: 94px;
+    }
+
+
+    .buttons {
+        font-size: 10px;
+        margin-left: 0rem;
+        gap: 15px;
+    }
+
+    .level-btn {
+        font-size: 14px;
+    }
+
+    .skill-set {
+        background-color: rgb(211 243 236);
+        border: 1px transparent solid;
+        padding: 9px;
+        height: 20px;
+        font-size: 13px;
+        color: rgb(100, 143, 134);
+        font-weight: 900;
+        cursor: pointer;
+    }
+
 }
